fix: set margin bottom on page and hero banner P tags to 15px on mobile

--- a/Childrens-Social-Care-CPD/styles/scss/overrides/_dfe-overrides.scss
+++ b/Childrens-Social-Care-CPD/styles/scss/overrides/_dfe-overrides.scss
@@ -62,8 +62,11 @@
 }
 
 @media (max-width: 63.99em) {
-    .body-header-font {
+    h1.body-header-font {
         margin-bottom: 20px;
+    }
+    p.body-header-font {
+        margin-bottom: 15px;
     }
 }
 
@@ -234,6 +237,12 @@ CONTENT TITLE BANNER
 
 p#content-banner-subtitle.govuk-body-l {
     margin-bottom: 20px;
+}
+
+@media (max-width: 63.99em) {
+    p#content-banner-subtitle.govuk-body-l {
+        margin-bottom: 15px;
+    }
 }
 
 /* Document list */
